# agentworld

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.cargo/: config.toml
bridge/: server.ts  start.sh
crates/core/: Cargo.toml
crates/core/src/: events.rs  lib.rs  types.rs  world_state.rs
crates/game/: Cargo.toml
crates/game/src/: components.rs  main.rs
crates/game/src/plugins/: adapter.rs  agents.rs  camera.rs  debug.rs  events.rs  hud.rs  mod.rs  sound.rs  sprites.rs  visuals.rs  world.rs
docs/: IMAGE_PROMPT.md  manual.html
frontend/: package.json  tsconfig.json
frontend/src/: main.tsx  store.ts  style.css  types.ts  ws.ts
frontend/src/components/: EventLog.tsx  Inspector.tsx  Roster.tsx  StatusBar.tsx
