[package]
name = "agent-world-game"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bevy-based game visualization for AgentWorld"

[dependencies]
agent-world-core = { path = "../core" }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "default_font",
    "png",
    "webgl2",
    "x11",
] }
