[package]
name = "agent-world-game"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bevy-based game visualization for AgentWorld"

[dependencies]
agent-world-core = { path = "../core" }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "default_font",
    "png",
    "webgl2",
    "x11",
] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Window",
    "Location",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
